@@ -9,6 +9,7 @@ class SiteController extends CController
 	{
 		return array(
 			// captcha action renders the CAPTCHA image
+			// this is used by the contact page
 			'captcha'=>array(
 				'class'=>'CCaptchaAction',
 				'backColor'=>0xEBF4FB,
@@ -28,7 +29,27 @@ class SiteController extends CController
 	}
 
 	/**
-	 * Displays a login form to login a user.
+	 * Displays the contact page
+	 */
+	public function actionContact()
+	{
+		$contact=new ContactForm;
+		if(isset($_POST['ContactForm']))
+		{
+			$contact->attributes=$_POST['ContactForm'];
+			if($contact->validate())
+			{
+				$headers="From: {$contact->email}\r\nReply-To: {$contact->email}";
+				mail(Yii::app()->params['adminEmail'],$contact->subject,$contact->body,$headers);
+				Yii::app()->user->setFlash('contact','Thank you for contacting us. We will respond to you as soon as possible.');
+				$this->refresh();
+			}
+		}
+		$this->render('contact',array('contact'=>$contact));
+	}
+
+	/**
+	 * Displays the login page
 	 */
 	public function actionLogin()
 	{
