@@ -17,6 +17,7 @@
 <?php $this->widget('application.components.MainMenu',array(
 	'items'=>array(
 		array('label'=>'Home', 'url'=>array('site/index')),
+		array('label'=>'Contact', 'url'=>array('site/contact')),
 		array('label'=>'Login', 'url'=>array('site/login'), 'visible'=>Yii::app()->user->isGuest),
 		array('label'=>'Logout', 'url'=>array('site/logout'), 'visible'=>!Yii::app()->user->isGuest)
 	),
