@@ -1,6 +1,8 @@
-<h2>
+<?php $this->pageTitle=Yii::app()->name; ?>
+
+<h1>
 	Welcome, <?php echo Yii::app()->user->name; ?>!
-</h2>
+</h1>
 <p>
 This is the homepage of <em><?php echo Yii::app()->name; ?></em>. You may modify the following files to customize the content of this page:
 </p>
