@@ -33,6 +33,7 @@ Version 1.0.1 to be released
 - Enhancement: Optimized the framework (Qiang)
 - Enhancement: Added CSort to support multisort (Qiang)
 - Enhancement: Refactored the code generated by the crud command (Qiang)
+- Enhancement: Added "contact" page to the skeleton application (Qiang)
 
 Version 1.0 December 3, 2008
 ----------------------------
